# tinifier

./: Cargo.toml
src/: main.rs  url_entry.rs
src/persistence/: in_memory.rs  mod.rs
